--- a/bootstrap-part-a/ch42 Cover Page Project/stylesheets/main.css
+++ b/bootstrap-part-a/ch42 Cover Page Project/stylesheets/main.css
@@ -1,26 +1,72 @@
 html {
-  /*width: 100%;*/
   height: 100%;
+  /*Stop propagation of background properties from body*/
+  background-color: white;
 }
 
 body {
-  /*width: 100%;*/
+  display: table;
+  width: 100%;
   min-height: 100%;
   background: url(../images/parthenon.jpg) no-repeat;
   background-size: cover;
   position: relative;
+  color: white;
+  /*Stopping background propagation to html, makes this necessary*/
+  z-index: -1;
 }
 
-overlay {
-  background-color: rgba(0, 0, 0, 0.5);
+.overlay {
+  background-color: rgba(0,0,0, 0.5);
   width: 100%;
   height: 100%;
-  z-index: -1;
   position: absolute;
-  /*background-color: black;*/
-  /*background: url("images/parthenon.jpg") no-repeat fixed center;*/
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
-h1 {
-  color: pink;
+#navbar-container {
+  top: 10px;
+  border-radius: 10px;
+}
+
+#navbar-container a.navbar-brand,
+#navbar ul a {
+  font-weight: 900;
+}
+
+#navbar-container a.navbar-brand {
+  font-size: 3.2rem;
+}
+
+#navbar ul a {
+  font-size: 1.8rem;
+}
+
+/*Mobile first approach*/
+@media (min-width: 768px)  {
+  #navbar-container {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #navbar ul {
+    margin-right: 0;
+  }
+}
+
+.center-content {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.footer-content {
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  width: 100%;
+  text-align: center;
 }
