--- a/bootstrap-part-a/ch42 Cover Page Project/stylesheets/main.css
+++ b/bootstrap-part-a/ch42 Cover Page Project/stylesheets/main.css
@@ -7,7 +7,7 @@ html {
 body {
   display: table;
   width: 100%;
-  min-height: 100%;
+  height: 100%;
   background: url(../images/parthenon.jpg) no-repeat;
   background-size: cover;
   position: relative;
