feat: Added dashboard images

--- a/bootstrap-part-a/ch43 Twitter Bootstrap Admin Dashboard/stylesheets/main.css
+++ b/bootstrap-part-a/ch43 Twitter Bootstrap Admin Dashboard/stylesheets/main.css
@@ -30,3 +30,11 @@ a:hover {
 .sidebar a:hover {
   color: #000096;
 }
+
+figcaption {
+  /*text-align: center;*/
+}
+
+main .img-responsive {
+  display: inline-block;
+}
